Marker Clusters working, (hopefully) fixed status list view gap

--- a/clients/web/css/styles.css
+++ b/clients/web/css/styles.css
@@ -433,9 +433,6 @@ Survey Beach
   padding: 0 20px;
   font-size: 300%;
 }
-.dropdown-menu > li {
-  background-color: rgb(75,75,75);
-}
 /*
 ************************************************************
 Beach Info
